# boilerplate

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml
boilerplate/: boilerplate.py  helpers.py
tests/: conftest.py
tests/data/template1/: template1.j2  template1.yml
tests/integration/: test_create.py
