[tool.poetry]
name = "boilerplate"
version = "0.1.0"
description = "A simple cli tool to create boilerplate code"
authors = ["Stefanos Koutoupis <skoutoupis@scify.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
black = "^23.11.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
mypy = "^1.7.1"
types-pyyaml = "^6.0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
boilerplate = "boilerplate.boilerplate:main"
